--- a/templates/TopBargain/index.html
+++ b/templates/TopBargain/index.html
@@ -14,6 +14,6 @@
 	<body><noscript>You need to enable JavaScript to run this app.</noscript>
 		<div id="root"></div>
 		{% load static %}
-		<script type="text/javascript" src="{% static 'TopBargain/js/main.533a65de.js' %}"></script>
+		<script type="text/javascript" src="{% static 'TopBargain/js/main.js' %}"></script>
 	</body>
 </html>
